Adiciona flexbox ao css do componente header

--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,49 +1,43 @@
-.home {
+.header {
     position: relative;
-    /* width: 1366px;
-    height: 768px; */
+    display: flex;
+    margin: 0 auto;
+    width: 700px;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid #ccc; */
 }
 
 img {
-    position: absolute;
+    /* position: absolute; */
+    /* top: 5px; */
     width: 90.37px;
     height: 25px;
-    left: 369px;
-    top: 18px;
+    /* left: 369px;
+    top: 18px; */
 }
 
-.top-right {
-    position: absolute;
 
+.top-right {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 16px;
+    width: 220px;
+    /* line-height: 16px; */
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    text-align: center;
+    /*text-align: center; */
 }
 
 .user-logged {
-    position: absolute;
-    width: 85px;
-    height: 13px;
-    left: 792px;
-    top: 24px;
-
-    /* Body */
-
-    /* font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    display: flex;
-    align-items: center;
-    text-align: center; */
-
-    /* Gray 2 */
+    /* position: absolute; */
+    /* width: 85px; */
+    /* height: 13px; */
+    /* left: 792px;
+    top: 24px; */
 
     color: #A8A8A8;
 }
@@ -51,24 +45,12 @@ img {
 .logout {
     text-decoration: none;
 
-    position: absolute;
-    width: 79px;
-    height: 13px;
-    left: 917px;
-    top: 24px;
+    /* position: absolute; */
+    /* width: 79px; */
+    /* height: 13px; */
+    /* left: 917px;
+    top: 24px; */
 
-    /* Body */
-
-    /* font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    display: flex;
-    align-items: center;
-    text-align: center; */
-
-    /* Primary */
 
     color: #49B4BB;
 }
