--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,7 +1,12 @@
-<div class="home">
+<div class="header">
     <img src="assets/logo.png" alt="Logo">
     <div class="top-right">
         <div class="user-logged" href="#">Lucas Freitas</div>
-        <a class="logout" href="#">Desconectar</a>   
+        <a class="logout" href="#">Desconectar</a>
     </div>
+
+    <!-- <div class="top-right">
+           
+    </div> -->
 </div>
+
