--- a/frontend/src/app/lista-consultas/lista-consultas.component.html
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.html
@@ -1,9 +1,12 @@
 <div class="lista-consultas">
-    <div class="titulo-lista">Consulta Clínica</div>
-    <a class="botao" href="#">
-        <img src="./../../assets/mais.png" alt="Adicionar consulta" class="icone">
-        <div class="texto">Nova consulta</div>
-    </a>
+    <div class="top-lista">
+        <div class="titulo-lista">Consulta Clínica</div>
+        <a class="botao-marcar" href="#">
+            <img src="./../../assets/mais.png" alt="Marcar consulta" class="icone">
+            <div class="texto">Nova consulta</div>
+        </a>
+    </div>
+    
     <table>
         <tr>
             <th>ESPECIALIDADE</th>
@@ -13,13 +16,18 @@
             <th></th>
         </tr>
 
-
+        
         <tr>
             <td>Cardiologia</td>
             <td>Dr. Caio Carlos Pereira</td>
             <td>01/01/2020</td>
             <td>13:00</td>
-            <td>Desmarcar</td>
+            <td>
+                <a class="botao-desmarcar" href="#" >
+                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <div class="texto">Desmarcar</div>
+                </a>
+            </td>
         </tr>
 
         <tr class="gray">
@@ -27,7 +35,12 @@
             <td>Dr. Caio Carlos Pereira</td>
             <td>01/01/2020</td>
             <td>13:00</td>
-            <td>Desmarcar</td>
+            <td>
+                <a class="botao-desmarcar" href="#" >
+                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <div class="texto">Desmarcar</div>
+                </a>
+            </td>
         </tr>
 
         <tr>
@@ -35,7 +48,12 @@
             <td>Dr. Caio Carlos Pereira</td>
             <td>01/01/2020</td>
             <td>13:00</td>
-            <td>Desmarcar</td>
+            <td>
+                <a class="botao-desmarcar" href="#" >
+                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <div class="texto">Desmarcar</div>
+                </a>
+            </td>
         </tr>
 
         <tr class="gray">
@@ -43,9 +61,12 @@
             <td>Dr. Caio Carlos Pereira</td>
             <td>01/01/2020</td>
             <td>13:00</td>
-            <td>Desmarcar</td>
+            <td>
+                <a class="botao-desmarcar" href="#" >
+                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <div class="texto">Desmarcar</div>
+                </a>
+            </td>
         </tr>
-
-
     </table>
 </div>
