--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 .header {
-    position: relative;
+    /* position: relative; */
     display: flex;
     margin: 0 auto;
-    width: 700px;
+    width: 800px;
     height: 50px;
     justify-content: space-between;
     align-items: center;
