Adiciona componente marcar consulta incompleto (estático)

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<app-lista-consultas></app-lista-consultas>
+<!-- <app-lista-consultas></app-lista-consultas> -->
+<app-nova-consulta></app-nova-consulta>
