--- a/frontend/src/app/nova-consulta/nova-consulta.component.css
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.css
@@ -70,7 +70,6 @@
 
 select {
     padding-left: 10px;
-    /* color: #A8A8A8; */
 }
 
 select:focus, select:valid {
@@ -78,8 +77,58 @@ select:focus, select:valid {
     background-color: #FFFFFF;
 }
 
-/* 
-option:checked {
-    background: #F8F8F8;
-    color: #A8A8A8;
-} */
+.botoes {
+    
+    margin: 0 auto;
+    width: 600px;
+    
+    
+    /* border: 1px solid #ccc; */
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.botao-cancelar {
+    text-decoration: none;
+    width: 180px;
+    height: 40px;
+
+    color: #49B4BB;
+    
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+.botao-confirmar {
+    text-decoration: none;
+    width: 180px;
+    height: 40px;
+
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    border-radius: 8px;
+    
+    color: #FFFFFF;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botao-confirmar:disabled {
+    background: #D9F1F3;
+}
+
+.botao-confirmar:enabled {
+    background: #49B4BB;
+}
