--- a/frontend/src/app/nova-consulta/nova-consulta.component.html
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.html
@@ -32,5 +32,9 @@
             </select>
         </div>
         
+        <div class="botoes">
+            <a href="#" class="botao-cancelar">Cancelar</a>
+            <input type="submit" value="Confirmar" class="botao-confirmar">
+        </div>
     </form>
 </div>
