--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <!-- <app-lista-consultas></app-lista-consultas> -->
-<app-nova-consulta></app-nova-consulta>
+<!-- <app-nova-consulta></app-nova-consulta> -->
+
+<app-login></app-login>
