--- a/frontend/src/app/nova-consulta/nova-consulta.component.css
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.css
@@ -12,7 +12,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     /* align-items: flex-start; */
     align-content: center;
 }
