--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,14 +2,14 @@
     <img class="logo" src="assets/logo.png" alt="Logo">
 
     <form>
-        <input type="text" name="username" id="username" placeholder="Email ou Login">
-        <input type="password" name="password" id="password" placeholder="Senha">
+        <input class="entrada" type="text" name="username" id="username" placeholder="Email ou Login">
+        <input class="entrada" type="password" name="password" id="password" placeholder="Senha">
         <input type="checkbox" name="remember" id="remember" value="remember">
         <label for="remember" id="remember-texto">Lembrar minha senha</label>
 
         <div class="botoes">
-            <a href="#" class="botao-criar-conta">Criar Conta</a>
-            <input type="submit" value="Acessar" class="botao-acessar">
+            <a class="botao criar" href="#">Criar Conta</a>
+            <input class="botao acessar" type="submit" value="Acessar">
         </div>
     </form>
 </div>
