--- a/frontend/src/app/registro/registro.component.html
+++ b/frontend/src/app/registro/registro.component.html
@@ -11,7 +11,7 @@
 
         <div class="botoes">
             <a class="botao cancelar" href="#">Criar Conta</a>
-            <input class="botao confirmar" type="submit" value="Acessar">
+            <input class="botao confirmar" type="submit" value="Confirmar">
         </div>
     </form>
 </div>
