--- a/frontend/src/app/nova-consulta/nova-consulta.component.html
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.html
@@ -33,8 +33,8 @@
         </div>
         
         <div class="botoes">
-            <a href="#" class="botao-cancelar">Cancelar</a>
-            <input type="submit" value="Confirmar" class="botao-confirmar">
+            <a class="botao cancelar" href="#">Cancelar</a>
+            <input class="botao confirmar" type="submit" value="Confirmar">
         </div>
     </form>
 </div>
