--- a/frontend/src/app/lista-consultas/lista-consultas.component.html
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.html
@@ -2,7 +2,7 @@
     <div class="top-lista">
         <div class="titulo-lista">Consulta Clínica</div>
         <a class="botao-marcar" href="#">
-            <img src="./../../assets/mais.png" alt="Marcar consulta" class="icone">
+            <img class="icone" src="assets/mais.png" alt="Marcar consulta">
             <div class="texto">Nova consulta</div>
         </a>
     </div>
@@ -24,7 +24,7 @@
             <td>13:00</td>
             <td>
                 <a class="botao-desmarcar" href="#" >
-                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
                 </a>
             </td>
@@ -37,7 +37,7 @@
             <td>13:00</td>
             <td>
                 <a class="botao-desmarcar" href="#" >
-                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
                 </a>
             </td>
@@ -50,7 +50,7 @@
             <td>13:00</td>
             <td>
                 <a class="botao-desmarcar" href="#" >
-                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
                 </a>
             </td>
@@ -63,7 +63,7 @@
             <td>13:00</td>
             <td>
                 <a class="botao-desmarcar" href="#" >
-                    <img src="./../../assets/x.png" alt="Desmarcar consulta" class="icone">
+                    <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
                 </a>
             </td>
