--- a/frontend/src/app/nova-consulta/nova-consulta.component.html
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.html
@@ -3,28 +3,28 @@
 
     <form class="cadastra-consulta">
         <div class="inputs">
-            <select name="especialidade" id="especialidade" class="item" required>
+            <select class="item" name="especialidade" id="especialidade" required>
                 <option value="" selected class="teste">Especialidade</option>
                 <option value="Pediatria">Pediatria</option>
                 <option value="Cardiologia">Pediatria</option>
                 <option value="Nefrologia">Pediatria</option>
             </select>
     
-            <select name="medico" id="medico" class="item" required>
+            <select class="item" name="medico" id="medico" required>
                 <option value="" selected>Médico</option>
                 <option value="Gregory House">Gregory House</option>
                 <option value="James Wilson">James Wilson</option>
                 <option value="Lisa Cuddy">Lisa Cuddy</option>
             </select>
     
-            <select name="data" id="data" class="item" required>
+            <select class="item" name="data" id="data" required>
                 <option value="" selected>Data</option>
                 <option value="15/06">15/06</option>
                 <option value="16/06">16/06</option>
                 <option value="17/06">17/06</option>
             </select>
     
-            <select name="hora" id="hora" class="item" required>
+            <select class="item" name="hora" id="hora" required>
                 <option value="" selected>Hora</option>
                 <option value="15:00">15:00</option>
                 <option value="16:00">16:00</option>
