--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="login">
     <img class="logo" src="assets/logo.png" alt="Logo">
 
-    <form>
-        <input class="entrada" type="text" name="username" id="username" placeholder="Email ou Login">
-        <input class="entrada" type="password" name="password" id="password" placeholder="Senha">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <input class="entrada" type="text" id="username" placeholder="Email ou Login" [formControl]="form.controls['username']">
+        <input class="entrada" type="password" id="password" placeholder="Senha" [formControl]="form.controls['password']">
         <input type="checkbox" name="remember" id="remember" value="remember">
         <label for="remember" id="remember-texto">Lembrar minha senha</label>
 
         <div class="botoes">
             <a class="botao criar" href="#">Criar Conta</a>
-            <input class="botao acessar" type="submit" value="Acessar">
+            <input class="botao acessar" type="submit" value="Acessar" [disabled]="!form.valid">
         </div>
     </form>
 </div>
