Aplica Reactive Forms ao componente registro

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,5 +2,5 @@
 <!-- <app-lista-consultas></app-lista-consultas> -->
 <!-- <app-nova-consulta></app-nova-consulta> -->
 
-<app-login></app-login>
-<!-- <app-registro></app-registro> -->
+<!-- <app-login></app-login> -->
+<app-registro></app-registro>
