--- a/frontend/src/app/registro/registro.component.css
+++ b/frontend/src/app/registro/registro.component.css
@@ -114,3 +114,14 @@ img {
     background: #49B4BB;
     cursor: pointer;
 }
+
+.senhas {
+    position: absolute;
+    left: 483px;
+    top: 515px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    color: red;
+}
