Troca anchors por buttons em página home

--- a/frontend/src/app/lista-consultas/lista-consultas.component.css
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.css
@@ -95,7 +95,9 @@ td {
 }
 
 .botao-desmarcar {
-    text-decoration: none;
+    border: none;
+    background: #FFFFFF;
+    cursor: pointer;
 
     width: 100px;
     display: flex;
