--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-header></app-header> -->
-<!-- <app-lista-consultas></app-lista-consultas> -->
+<app-header></app-header>
+<app-lista-consultas></app-lista-consultas>
 <!-- <app-nova-consulta></app-nova-consulta> -->
 
 <!-- <app-login></app-login> -->
-<app-registro></app-registro>
+<!-- <app-registro></app-registro> -->
