--- a/frontend/src/app/lista-consultas/lista-consultas.component.html
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.html
@@ -23,10 +23,10 @@
             <td>01/01/2020</td>
             <td>13:00</td>
             <td>
-                <a class="botao-desmarcar" href="#" >
+                <button class="botao-desmarcar">
                     <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
-                </a>
+                </button>
             </td>
         </tr>
 
@@ -36,10 +36,10 @@
             <td>01/01/2020</td>
             <td>13:00</td>
             <td>
-                <a class="botao-desmarcar" href="#" >
+                <button class="botao-desmarcar">
                     <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
-                </a>
+                </button>
             </td>
         </tr>
 
@@ -49,10 +49,10 @@
             <td>01/01/2020</td>
             <td>13:00</td>
             <td>
-                <a class="botao-desmarcar" href="#" >
+                <button class="botao-desmarcar">
                     <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
-                </a>
+                </button>
             </td>
         </tr>
 
@@ -62,10 +62,10 @@
             <td>01/01/2020</td>
             <td>13:00</td>
             <td>
-                <a class="botao-desmarcar" href="#" >
+                <button class="botao-desmarcar">
                     <img class="icone" src="assets/x.png" alt="Desmarcar consulta">
                     <div class="texto">Desmarcar</div>
-                </a>
+                </button>
             </td>
         </tr>
     </table>
