Aplica Reactive Forms ao componente nova consulta (e usa dummy data pra simular os valores possíveis)

--- a/frontend/src/app/nova-consulta/nova-consulta.component.css
+++ b/frontend/src/app/nova-consulta/nova-consulta.component.css
@@ -69,9 +69,19 @@ select {
     padding-left: 10px;
 }
 
-select:focus, select:valid {
+select:focus, .visited {
     color: #444444;
     background-color: #FFFFFF;
+}
+
+option {
+    color: #444444;
+    background-color: #FFFFFF;
+}
+
+option:disabled {
+    background: #F8F8F8;
+    color: #A8A8A8;
 }
 
 
