Adiciona routes e adiciona os redirecionamentos na página de login

--- a/frontend/src/app/lista-consultas/lista-consultas.component.html
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="lista-consultas">
     <div class="top-lista">
         <div class="titulo-lista">Consulta Clínica</div>
