Adiciona listagem de consultas e funcionalidade de desmarcar

--- a/frontend/src/app/lista-consultas/lista-consultas.component.html
+++ b/frontend/src/app/lista-consultas/lista-consultas.component.html
@@ -7,8 +7,10 @@
             <div class="texto">Nova consulta</div>
         </a>
     </div>
-    
-    <table>
+     
+    <p *ngIf="!loadedConsultas">Loading...</p>
+
+    <table *ngIf="loadedConsultas">
         <tr>
             <th>ESPECIALIDADE</th>
             <th>PROFISSIONAL</th>
