--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header">
     <img src="assets/logo.png" alt="Logo">
     <div class="top-right">
-        <div class="user-logged" href="#">Lucas Freitas</div>
-        <a class="logout" href="#">Desconectar</a>
+        <div class="user-logged">{{ usuario }}</div>
+        <a class="logout" [routerLink]="['/login']">Desconectar</a>
     </div>
 </div>
 
